--- a/style/index_style.css
+++ b/style/index_style.css
@@ -43,6 +43,7 @@ header {
     width: 100%;
     background: rgb(255, 255, 255, .85);
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px); /*Safari 전용 blur*/
     z-index: 1;
 }
 nav {
