--- a/style/index_keyframe_media.css
+++ b/style/index_keyframe_media.css
@@ -40,7 +40,7 @@
     }
     .subtitle {
         font-weight: 300;
-        font-size: 3vw;
+        font-size: 3em;
         line-height: 2.25vw;
     }
     .source {
