--- a/style/index_keyframe_media.css
+++ b/style/index_keyframe_media.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+
+/*반응형(였던 것)*/
+/*
 @media all and (max-width: 479px) {
 
 }
@@ -12,7 +15,7 @@
 @media screen and (min-width: 1200px) {
 
 }
-
+*/
 
 
 
